# purrgr3ss

./: .gitignore  README.md  pyproject.toml
.crossnote/: style.less
.github/: FUNDING.yml
assets/css/: purrgress.css
docs/: archived.md  badges.md  purrboard.md  tags.md
purrgress/: cli.py  plog_cli.py
purrgress/data/2025/: 06.yaml
purrgress/plog/: cleanup.py  cli.py  config.py  config.yaml  core.py  log_setup.py  reports.py
purrgress/scripts/: archive.py  clean.py  purrdate.py
purrgress/utils/: __init__.py  date.py  load.py  logutils.py  markdown.py  path.py  text.py  yaml_tools.py
tests/: conftest.py  test_cleanup.py  test_core_session.py  test_date_utils.py  test_heatmap.py
