[project]
name = "purrgress"
version = "0.2.0"
description = "personal productivity automation suite 😼"
requires-python = ">=3.9"
dependencies = ["click"]

[project.scripts]
purrgress = "purrgress.cli:cli"

[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where    = [""]       
include  = ["purrgress*"] 
exclude  = ["assets", "tests*", "docs"]